--- a/modelo/index.html
+++ b/modelo/index.html
@@ -19,6 +19,22 @@
       maxime quos, doloribus vitae voluptatum quisquam necessitatibus
       pariatur veritatis exercitationem beatae officiis suscipit Ea!
     </p>
+
+    <form action="">
+      <label for="input-teste-1">Nome:</label>
+      <input type="text" id="input-teste-1">
+
+      <label for="input-teste-2">Senha:</label>
+      <input type="password" id="input-teste-2">
+
+      <label for="input-teste-3">E-mail:</label>
+      <input type="email" id="input-teste-3">
+
+      <label for="input-teste-4">Número:</label>
+      <input type="number" id="input-teste-4">
+
+      <button type="submit">Enviar</button>
+    </form>
   </section>
 
   <script src="./assets/js/main.js"></script>
