--- a/calc-imc-js/index.html
+++ b/calc-imc-js/index.html
@@ -64,6 +64,8 @@
       </th>
     </table>
 
+    <h1>Calcule se IMC</h1>
+
     <form action="" method="get" class="form">
       <label for="input-peso">Peso:</label>
       <input type="text" class="input-peso" placeholder="Exemplo: 90">
