--- a/calc-imc-js/index.html
+++ b/calc-imc-js/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Modelo</title>
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="shortcut icon" href="assets/img/download.ico" type="image/x-icon">
 </head>
 
 <body>
