continucao no curso de JS

--- a/listaDeTarefas/index.html
+++ b/listaDeTarefas/index.html
@@ -14,11 +14,11 @@
   <section class="container">
     <h1>Lista de tarefas</h1>
     <p>
-      <input type="text" class="input-tarefa">
+      <input type="text" class="input-terefa">
       <button class="btn-tarefa"><strong>+</strong></button>
     </p>
 
-    <ul class="tarefas"></ul>
+    <ul class="tarefa"></ul>
   </section>
 
   <script src="./assets/js/main.js"></script>
